[metadata]
name = key_id_maker
version = 0.1
author = ToorajJahangiri
author_email = Toorajjahangiri@gmail.com
license = -
url = https://github.com/Class-Tooraj/key_id_maker
description = Generate Unique Key ID.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
scripts = ./main.py
packages = find:
python_requires = >= 3.7.*

[options.packages.find]
exclude =
    test*
    testing*